<resources>
    <string name="app_name">NewsApp</string>
    <string name="edit_news">EDIT NEWS</string>
    <string name="edit_title">Title</string>
    <string name="edit_news_title">Enter the News Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_news_desc">Enter the description regarding the News here</string>
    <string name="edit_tags">Tags</string>
    <string name="edit_news_tags">#tags</string>
    <string name="edit_categories">Categories</string>
    <string name="edit_source">Source</string>
    <string name="edit_url">URL</string>
    <string name="edit_save_changes">Save Changes</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="signUp">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fab_add">Add</string>
    <string name="login_password">Enter the Password</string>
    <string name="login_password_title">Password</string>
    <string name="login_email">Enter the email</string>
    <string name="login_email_title">Email</string>
    <string name="title_sign_in">Sign In</string>
    <string name="source">Source</string>
    <string name="create_an_account"><a>Don\'t have an account? Create now!</a></string>
    <string name="select_image">Select Image</string>
    <string name="hello">Hello</string>
    <string name="user">User</string>
    <string name="for_you">For you</string>
    <string name="add_edit_news">%s News</string>
    <string name="enter_comment">Enter comment</string>
    <string name="send">Send</string>
    <string name="comment">comment</string>
    <string name="username">Username</string>
    <string name="alert_ques">%s?</string>
    <string name="user_profile">User Profile</string>
    <string name="view_username">Username</string>
    <string name="user_name_hint">User Name</string>
    <string name="view_email">Email</string>
    <string name="user_email_hint">User Email</string>
    <string name="view_hp_number">Hp Number</string>
    <string name="hp_number_hint">Hp Number</string>
    <string name="edit_password">Edit Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_password_here">Edit password here!</string>
    <string name="want_to_change_your_password">Want to change your password?</string>
    <string name="_60x_xxxxxxxx">+60X-XXXXXXXX</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="enter_username">Enter username</string>
    <string name="choose_a_profile_picture">Choose a profile picture</string>
    <string name="edit_profile">Edit Profile</string>


    <string-array name="category_options">
        <item>HOT_NEWS</item>
        <item>NORMAL_NEWS</item>
    </string-array>
</resources>