<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.Hilt_MainActivity">

    <data>
        <variable
            name="updateUser"
            type="com.example.newsapp.ui.editUserProfile.EditUserViewModel" />
    </data>


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="@dimen/m">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textSize="@dimen/giant_text_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/m"
            android:layout_marginTop="24dp"/>


        <ImageView
            android:id="@+id/imgGallery"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_image"
            app:imageByteArray="@{updateUser.img}"
            />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_profile_picture"
            android:backgroundTint="@color/grey"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/m"
            android:paddingVertical="@dimen/s"
            android:paddingStart="@dimen/xs"
            android:paddingEnd="@dimen/xs"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/giant_text_size"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxxxl"
                android:paddingHorizontal="@dimen/xs"
                android:text="@={updateUser.userName}"
                android:hint="@string/enter_username"
                android:background="@drawable/input_box"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="@dimen/xl"
                android:textSize="@dimen/giant_text_size"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxxxl"
                android:paddingHorizontal="@dimen/xs"
                android:text="@={updateUser.email}"
                android:hint="@string/enter_the_email"
                android:background="@drawable/input_box"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_hp_number"
                android:layout_marginTop="@dimen/xl"
                android:textSize="@dimen/giant_text_size"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xxxxxl"
                android:paddingHorizontal="@dimen/xs"
                android:text="@={updateUser.phoneNumber}"
                android:hint="@string/_60x_xxxxxxxx"
                android:background="@drawable/input_box"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/want_to_change_your_password"
                android:layout_marginTop="@dimen/xl"
                android:textSize="@dimen/giant_text_size"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnEditPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_password_here"
                android:backgroundTint="@color/grey"/>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:onClick="@{() -> updateUser.updateProfile()}"
            android:backgroundTint="@color/grey"
            android:layout_marginHorizontal="@dimen/xxxl"
            android:layout_marginVertical="@dimen/xxl"
            android:layout_marginBottom="@dimen/xxxxxl"/>
    </LinearLayout>

</ScrollView></layout>