<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="updatePassword"
            type="com.example.newsapp.ui.editUserPassword.EditUserPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_marginVertical="@dimen/xxxxxl"
            android:layout_marginHorizontal="@dimen/m" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_password"
                android:textSize="@dimen/giant_text_size"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/m"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginHorizontal="@dimen/m"
                android:paddingVertical="@dimen/s"
                android:paddingStart="@dimen/xs"
                android:paddingEnd="@dimen/xs"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/old_password"
                    android:layout_marginTop="@dimen/xl"
                    android:textSize="@dimen/giant_text_size"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxl"
                    android:paddingHorizontal="@dimen/xs"
                    android:inputType="textPassword"
                    android:text="@={updatePassword.oldPassword}"
                    android:hint="@string/enter_old_password"
                    android:background="@drawable/input_box" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:layout_marginTop="@dimen/xl"
                    android:textSize="@dimen/giant_text_size"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxl"
                    android:paddingHorizontal="@dimen/xs"
                    android:inputType="textPassword"
                    android:text="@={updatePassword.newPassword}"
                    android:hint="@string/enter_new_password"
                    android:background="@drawable/input_box" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:layout_marginTop="@dimen/xl"
                    android:textSize="@dimen/giant_text_size"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxl"
                    android:paddingHorizontal="@dimen/xs"
                    android:inputType="textPassword"
                    android:text="@={updatePassword.confirmPassword}"
                    android:hint="@string/confirm_your_new_password"
                    android:background="@drawable/input_box" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"
                android:onClick="@{() -> updatePassword.changePassword()}"
                android:backgroundTint="@color/grey"
                android:layout_marginHorizontal="@dimen/xxxl"
                android:layout_marginVertical="@dimen/xxl"
                android:layout_marginBottom="@dimen/xxxxxl"/>
        </LinearLayout>

    </ScrollView>
</layout>
