<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.viewUserProfile.ViewUserFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEditUser"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:icon="@drawable/ic_edit"
                    android:insetLeft="0dp"
                    android:insetRight="0dp"
                    android:padding="0dp"
                    app:iconPadding="0dp"
                    app:iconGravity="textStart"
                    android:backgroundTint="@color/grey"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="5dp"
                    app:icon="@drawable/ic_logout"
                    android:insetLeft="0dp"
                    android:insetRight="0dp"
                    android:padding="0dp"
                    app:iconPadding="0dp"
                    app:iconGravity="textStart"
                    android:backgroundTint="@color/grey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_profile"
                    android:textSize="@dimen/giant_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/m"
                    android:layout_marginTop="24dp"/>

                <ImageView
                    android:id="@+id/imgGallery"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_username"
                    android:textSize="@dimen/giant_text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxl"
                    android:paddingHorizontal="@dimen/xs"
                    android:textSize="20sp"
                    android:hint="@string/user_name_hint"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_email"
                    android:layout_marginTop="@dimen/xl"
                    android:textSize="@dimen/giant_text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxl"
                    android:paddingHorizontal="@dimen/xs"
                    android:textSize="20sp"
                    android:hint="@string/user_email_hint"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_hp_number"
                    android:layout_marginTop="@dimen/xl"
                    android:textSize="@dimen/giant_text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxl"
                    android:paddingHorizontal="@dimen/xs"
                    android:textSize="20sp"
                    android:hint="@string/hp_number_hint"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>