<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cvNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginVertical="4dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:text="@string/title"/>

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_profile"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/ic_launcher_background"/>

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/category" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/description"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
